--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -7,7 +7,6 @@ name: Report
 on:
   push:
     branches: 
-      - master
       - Debatrix-test
   schedule:
     - cron: '10 0 * * *'
@@ -36,20 +35,10 @@ jobs:
         key: "runtime"
         restore-keys: |
           runtime
-
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+          
+    - name: set env and run
       env:
-        SEP_USER_NAME: ${{secrets.SEP_USER_NAME}}
-        SEP_PASSWD: ${{secrets.SEP_PASSWD}}
-        API_KEY: ${{secrets.API_KEY}}
-        SMTP_PORT: ${{secrets.SMTP_PORT}}
-        SMTP_SERVER: ${{secrets.SMTP_SERVER}}
-        SENDER_EMAIL: ${{secrets.SENDER_EMAIL}}
-        SENDER_EMAIL_PASSWD: ${{secrets.SENDER_EMAIL_PASSWD}}
-        RECEIVER_EMAIL: ${{secrets.RECEIVER_EMAIL}}
+          a: ${{secrets.a}}
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytz requests datetime
-        python ./sub.py  
+          python main.py
+
