--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -8,37 +8,30 @@ on:
   push:
     branches: 
       - Debatrix-test
-  schedule:
-    - cron: '10 0 * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  report:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-      
-    - name: Set up Python 3.6
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.6
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-    - name: cache cookies
-      uses: actions/cache@v2
-      with:
-        path: "**.json"
-        key: "runtime"
-        restore-keys: |
-          runtime
-          
-    - name: set env and run
-      env:
-          pwd: ${{secrets.SEP_PASSWD}}
-      run: |
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+      - name: Set up Python 3.6
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.6
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        env:
+          a: ${{secrets.a}}
+        run: |
           python main.py
-
